fixed spacing class in css file

--- a/styles.css
+++ b/styles.css
@@ -99,7 +99,7 @@ body {
 }
 
 .spacing{
-    margin-top: 60px;
+    margin-top: 10px;
 }
 
 .heading{
